--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "name": "register",
   "version": "0.1.0",
   "private": true,
-"homepage": "http://GOURAV0188.github.io/register2",
-
+"homepage": "http://GOURAV0188.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
